Implement WebSocket messages batch